<resources>
    <string name="app_name">BeeCab for Drivers</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="action_loggedUser">Logged in as</string>
    <string name="action_profile">Profile</string>
    <string name="action_accept_job">Accept</string>
    <string name="action_view_job">View Details</string>
    <string name="title_activity_registration">Registration</string>
    <string name="screen_name">Screen Name(the name other users see)</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_company_name">Company Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Cell Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_pre_password">Previous Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_sign_up">Create Account</string>
    <string name="btn_log_in">Get in</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="btn_send_forgotten">Send</string>
    <string name="tell"><u>Tell us a bit about yourself!</u> </string>
    <string name="pick_a_role">Select an affiliation, &#8230;  in a fleet if you are part of a cab company&#8230; independent if otherwise.  </string>
    <string name="title_activity_taxi_splash">Taxi</string>
    <string name="title_activity_registration_confirmation">Confirmation</string>
    <string name="msg_sit_back">Sit back &amp; Relax! while I verify your mobile number</string>
    <string name="msg_manual_otp">(Enter the OTP below in case if I fail to detect the SMS automatically)</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="lbl_submit">SUBMIT</string>
    <string name="title_activity_requester">Requester</string>
    <string name="title_activity_pick__des_map">Pick a location</string>
    <string name="tap_instructions">(Drag the  marker to the location and confirm with OK)</string>
    <string name="move_the_camera">Move the camera</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="title_activity_view_cab_response">ViewCabResponse</string>
    <string name="title_activity_set_route">Set Route</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_set_route2">SetRoute2</string>
    <string name="title_activity_login">Welcome</string>
    <string name="title_activity_edit_profile">Profile</string>
    <string name="title_activity_notice_board">Notice Board</string>
    <string name="title_activity_jobs_board">BeeCab for Drivers</string>
    <string name="title_activity_pickup_board">Pickup Board</string>
    <string name="title_activity_job_details">Job Details</string>
    <string name="google_direction_api_key">AIzaSyA6ukiOzzaLCeoxmumYhbB5s0ksvpjWaBU</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_jo_rpickup_board">Pickup Board</string>
    <string name="title_activity_update_password">UpdatePassword</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="missing_info">Missing some critical information</string>
    <string name="pwd_short">The password provided is too short (min. 6 characters)</string>
    <string name="pwd_mismatch">The password and the confirmed password do not match</string>
    <string name="bidtitle">Your bid</string>
    <string name="title_activity_referral_history">ReferralHistory</string>
    <string name="title_activity_send_referral">SendReferral</string>
    <string name="sensitive">This information is considered sensitive. \n Please send us a ticket indicating the request for change </string>
    <string-array name="city">
        <item>Bloemfontein</item>
        <item>Boksburg</item>
        <item>Cape Town</item>
        <item>Durban</item>
        <item>East London</item>
        <item>Germiston</item>
        <item>iBhayi</item>
        <item>Johannesburg</item>
        <item>Katlehong</item>
        <item>Khayelitsha</item>
        <item>Mamelodi </item>
        <item>Mitchells Plain</item>
        <item>Port Elizabeth</item>
        <item>Pretoria</item>
        <item>Randburg</item>
        <item>Roodepoort </item>
        <item>Soshanguve</item>
        <item>Soweto</item>
        <item>Tembisa</item>
        <item>Umlazi</item>
    </string-array>
    <string name="title_activity_driver_account">Account</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_credits">Credits</string>
    <string name="title_credits">BeeCab and BeeCab for Drivers</string>
    <string name="main_credits">are software developed by INQB8 Business Technologies (Pty) \n All rights reserved. More info at  </string>
    <string name="link_credits">www.inqb8.co.za - www.beecab.net - www.beecab.co.za</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>