<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_credits"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ansteph.com.beecabfordrivers.view.extraAction.Credits"
    tools:showIn="@layout/activity_credits">

    <ImageView
        android:layout_width="176dp"
        android:layout_height="144dp"
        app:srcCompat="@drawable/taxiicon"
        android:id="@+id/imageView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintVertical_bias="0.19"/>

    <Button
        android:text="Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnbacktoboard"
        app:layout_constraintRight_toRightOf="@+id/imageView2"
        app:layout_constraintLeft_toLeftOf="@+id/imageView2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        style="@style/buttonStyle"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:padding="5dp"/>

    <TextView
        android:text="@string/link_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        app:layout_constraintBottom_toTopOf="@+id/btnbacktoboard"
        app:layout_constraintRight_toRightOf="@+id/imageView2"
        android:layout_marginBottom="56dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView2"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:text="@string/main_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        app:layout_constraintRight_toRightOf="@+id/imageView2"
        app:layout_constraintLeft_toLeftOf="@+id/imageView2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:text="@string/title_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"

        android:textColor="@color/colorAccent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>
